static/styles/style.css
/* ... */
.pagination .page-item.active a {
  opacity: 1;
  background-color: #000;
  color: white;
  border: none;
}

@media screen and (max-width: 580px) {

  li.page-item:nth-child(3):not(.active),
  li.page-item:nth-child(4):not(.active),
  li.page-item:nth-child(5):not(.active),
  li.page-item:nth-child(6):not(.active),
  li.page-item:nth-child(7):not(.active){
      display: none;
  }
}

@media (max-width: 768px) {
    .content {
        max-width: 100%;
    }

    .wrap {
        margin: 0 auto;
    }

    .aside {
        transform: translateX(-100%);
        transition: .4s;
        position: fixed;
        left: 0;
        top: 0;
        max-width: 50%;
        z-index: 5;
        background-color: var(--background-color);
    }

    .mobile-menu {
        display: block;
    }
    .header h2 {
        max-width: 100%;
    }
}

.menuOpened {
    transform: translateX(0);
    transition: .4s;
}

@media (min-width: 769px) {
    .aside {
        position: relative;
        max-width: 35%;
    }

    .openMenu, .closeMenu {
        display: none;
    }
}

